SERVER-73532: Invalidate image collection entry when namespace is missing during initial sync